--- a/reCaptcha_invisible_/Views/Account/Register.cshtml
+++ b/reCaptcha_invisible_/Views/Account/Register.cshtml
@@ -31,7 +31,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-default g-recaptcha" data-sitekey="6Lef_XYeAAAAAE-9iofiy3baW6eUfwXS3Ao6lfBh" onclick="validate();" data-callback="onSubmit" value="Register" />
         </div>
     </div>
 }
