--- a/reCaptcha_invisible_/Views/Account/Register.cshtml
+++ b/reCaptcha_invisible_/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form", id="registerForm" }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form", id = "registerForm" }))
 {
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
@@ -38,4 +38,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/reCaptcha.js" type="text/javascript"></script>
 }
