reCaptcha Checkbox implemented on login page

--- a/reCaptcha_invisible_/Views/Account/Register.cshtml
+++ b/reCaptcha_invisible_/Views/Account/Register.cshtml
@@ -38,5 +38,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script src="~/Scripts/reCaptcha.js" type="text/javascript"></script>
+    <script src="~/Scripts/reCaptcha.invisible.js" type="text/javascript"></script>
 }
