--- a/reCaptcha_invisible_/Views/Account/Login.cshtml
+++ b/reCaptcha_invisible_/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form", id = "loginForm" }))
             {
                 @Html.AntiForgeryToken()
                 <h4>Use a local account to log in.</h4>
@@ -36,9 +36,10 @@
                         </div>
                     </div>
                 </div>
+                <div class="g-recaptcha" data-sitekey="6Lef_XYeAAAAAE-9iofiy3baW6eUfwXS3Ao6lfBh"></div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input type="submit" value="Log in" class="btn btn-default" onclick="validate();" data-callback="onSubmit" />
                     </div>
                 </div>
                 <p>
@@ -60,4 +61,6 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/reCaptcha.checkbox.js" type="text/javascript"></script>
+
 }
