Login page bug fixed

--- a/reCaptcha_invisible_/Views/Account/Login.cshtml
+++ b/reCaptcha_invisible_/Views/Account/Login.cshtml
@@ -37,9 +37,10 @@
                     </div>
                 </div>
                 <div class="g-recaptcha" data-sitekey="6Lef_XYeAAAAAE-9iofiy3baW6eUfwXS3Ao6lfBh"></div>
+                <span style="color:red; float:left" class="error" id="isChecked"></span>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" onclick="validate();" data-callback="onSubmit" />
+                        <input type="submit" id="btnLogin" value="Log in" class="btn btn-default" onclick="validate();" data-callback="onSubmit" />
                     </div>
                 </div>
                 <p>
